# inertial_navigation_systems

./: .gitmodules
hw/: .RData  .Rhistory  .lintr  clc.r  main.Rmd  main.r
lab1/: A.txt  A_out.txt  B.txt  C.txt  coord_rad.txt  lab1.m  markdown.docx  output.txt
lab2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  solution.cpp  solution.h
